--- a/index.html
+++ b/index.html
@@ -154,10 +154,11 @@
                               <div class="carousel-item active">
                                   <img src="img/slider/bg-1.jpg" alt="">
                                   <div class="carousel-caption">
-                                      <h3 class="slide-title animated fadeInDown"><span>Helium</span> - Bootstrap 4 UI Kit</h3>
-                                      <h5 class="slide-text animated fadeIn">Lorem ipsum dolor sit amet, consectetuer adipiscing elit<br> Curabitur ultricies nisi Nam eget dui. Etiam rhoncus</h5>
-                                      <a href="#" class="btn btn-lg btn-common animated fadeInUp">Get Started</a>
-                                      <a href="#" class="btn btn-lg btn-border animated fadeInUp">Learn More</a>
+                                      <h3 class="slide-title animated fadeInDown"><span>C&D</span>от Проэкта до Реализация </h3>
+                                      <h5 class="slide-text animated fadeIn">Быстрое и качественное проэктирование и развертывание <br>
+                                                                            веб сайтов любой сложности, магазины, блоги, лэндинги</h5>
+                                      <a href="#pricing" class="btn btn-lg btn-common animated fadeInUp">Заказать</a>
+                                      <a href="#portfolio" class="btn btn-lg btn-border animated fadeInUp">Наши работы</a>
                                   </div>
                               </div>
                               <div class="carousel-item">
@@ -237,113 +238,113 @@
     <!-- About Section End -->
 
     <!-- Services Section Start -->
-  <section id="services" class="section-padding">
-      <div class="container">
-          <div class="row">
-              <div class="col-md-12">
-                  <h2 class="section-title wow fadeInDown animated" data-wow-delay="0.3s">Our Services</h2>
+    <section id="services" class="section-padding">
+          <div class="container">
+              <div class="row">
+                  <div class="col-md-12">
+                      <h2 class="section-title wow fadeInDown animated" data-wow-delay="0.3s">Our Services</h2>
+                  </div>
+              </div>
+              <div class="row">
+                  <!-- Start Service Icon 1 -->
+                  <div class="col-md-6 col-lg-4 col-xs-12">
+                      <div class="service-box">
+                          <div class="service-icon">
+                              <i class="fa fa-cogs"></i>
+                          </div>
+                          <div class="service-content">
+                              <h4><a href="#">Easy to Customize</a></h4>
+                              <p>
+                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae architecto officiis consequuntur vero error excepturi.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- End Service Icon 1 -->
+
+                  <!-- Start Service Icon 2 -->
+                  <div class="col-md-6 col-lg-4 col-xs-12">
+                      <div class="service-box">
+                          <div class="service-icon">
+                              <i class="fa fa-cubes"></i>
+                          </div>
+                          <div class="service-content">
+                              <h4><a href="#">100+ Components</a></h4>
+                              <p>
+                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae architecto officiis consequuntur vero error excepturi.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- End Service Icon 2 -->
+
+                  <!-- Start Service Icon 3 -->
+                  <div class="col-md-6 col-lg-4 col-xs-12">
+                      <div class="service-box">
+                          <div class="service-icon">
+                              <i class="fa fa-tachometer"></i>
+                          </div>
+                          <div class="service-content">
+                              <h4><a href="#">Super Fast</a></h4>
+                              <p>
+                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae architecto officiis consequuntur vero error excepturi.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- End Service Icon 3 -->
+
+                  <!-- Start Service Icon 4 -->
+                  <div class="col-md-6 col-lg-4 col-xs-12">
+                      <div class="service-box">
+                          <div class="service-icon">
+                              <i class="fa fa-check"></i>
+                          </div>
+                          <div class="service-content">
+                              <h4><a href="#">Clean Design</a></h4>
+                              <p>
+                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae architecto officiis consequuntur vero error excepturi.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- End Service Icon 4 -->
+
+                  <!-- Start Service Icon 5 -->
+                  <div class="col-md-6 col-lg-4 col-xs-12">
+                      <div class="service-box">
+                          <div class="service-icon">
+                              <i class="fa fa-flash"></i>
+                          </div>
+                          <div class="service-content">
+                              <h4><a href="#">Bootstrap 4 UI Kit</a></h4>
+                              <p>
+                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae architecto officiis consequuntur vero error excepturi.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- End Service Icon 5 -->
+
+                  <!-- Start Service Icon 6 -->
+                  <div class="col-md-6 col-lg-4 col-xs-12">
+                      <div class="service-box">
+                          <div class="service-icon">
+                              <i class="fa fa-hand-pointer-o"></i>
+                          </div>
+                          <div class="service-content">
+                              <h4><a href="#">Advanced Features</a></h4>
+                              <p>
+                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae architecto officiis consequuntur vero error excepturi.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- End Service Icon 6 -->
               </div>
           </div>
-          <div class="row">
-              <!-- Start Service Icon 1 -->
-              <div class="col-md-6 col-lg-4 col-xs-12">
-                  <div class="service-box">
-                      <div class="service-icon">
-                          <i class="fa fa-cogs"></i>
-                      </div>
-                      <div class="service-content">
-                          <h4><a href="#">Easy to Customize</a></h4>
-                          <p>
-                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae architecto officiis consequuntur vero error excepturi.
-                          </p>
-                      </div>
-                  </div>
-              </div>
-              <!-- End Service Icon 1 -->
-
-              <!-- Start Service Icon 2 -->
-              <div class="col-md-6 col-lg-4 col-xs-12">
-                  <div class="service-box">
-                      <div class="service-icon">
-                          <i class="fa fa-cubes"></i>
-                      </div>
-                      <div class="service-content">
-                          <h4><a href="#">100+ Components</a></h4>
-                          <p>
-                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae architecto officiis consequuntur vero error excepturi.
-                          </p>
-                      </div>
-                  </div>
-              </div>
-              <!-- End Service Icon 2 -->
-
-              <!-- Start Service Icon 3 -->
-              <div class="col-md-6 col-lg-4 col-xs-12">
-                  <div class="service-box">
-                      <div class="service-icon">
-                          <i class="fa fa-tachometer"></i>
-                      </div>
-                      <div class="service-content">
-                          <h4><a href="#">Super Fast</a></h4>
-                          <p>
-                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae architecto officiis consequuntur vero error excepturi.
-                          </p>
-                      </div>
-                  </div>
-              </div>
-              <!-- End Service Icon 3 -->
-
-              <!-- Start Service Icon 4 -->
-              <div class="col-md-6 col-lg-4 col-xs-12">
-                  <div class="service-box">
-                      <div class="service-icon">
-                          <i class="fa fa-check"></i>
-                      </div>
-                      <div class="service-content">
-                          <h4><a href="#">Clean Design</a></h4>
-                          <p>
-                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae architecto officiis consequuntur vero error excepturi.
-                          </p>
-                      </div>
-                  </div>
-              </div>
-              <!-- End Service Icon 4 -->
-
-              <!-- Start Service Icon 5 -->
-              <div class="col-md-6 col-lg-4 col-xs-12">
-                  <div class="service-box">
-                      <div class="service-icon">
-                          <i class="fa fa-flash"></i>
-                      </div>
-                      <div class="service-content">
-                          <h4><a href="#">Bootstrap 4 UI Kit</a></h4>
-                          <p>
-                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae architecto officiis consequuntur vero error excepturi.
-                          </p>
-                      </div>
-                  </div>
-              </div>
-              <!-- End Service Icon 5 -->
-
-              <!-- Start Service Icon 6 -->
-              <div class="col-md-6 col-lg-4 col-xs-12">
-                  <div class="service-box">
-                      <div class="service-icon">
-                          <i class="fa fa-hand-pointer-o"></i>
-                      </div>
-                      <div class="service-content">
-                          <h4><a href="#">Advanced Features</a></h4>
-                          <p>
-                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae architecto officiis consequuntur vero error excepturi.
-                          </p>
-                      </div>
-                  </div>
-              </div>
-              <!-- End Service Icon 6 -->
-          </div>
-      </div>
-  </section>
-  <!-- Services Section End -->
+      </section>
+    <!-- Services Section End -->
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="section-padding">
